authentication_through_jwt

--- a/frontend/jwt/src/app/app.component.html
+++ b/frontend/jwt/src/app/app.component.html
@@ -15,7 +15,7 @@
   </div>
 </body> -->
 
-
+<!-- 
 
 
 <body>
@@ -33,4 +33,5 @@
       <button type="submit" [disabled]="loginForm.invalid">Login</button>
     </form>
   </div>
-</body>
+</body> -->
+<router-outlet></router-outlet>
